# python-packaging-2023

./: .gitignore  _toc.yml  index.md  myst.yml  package-lock.json  package.json  readme.md  synopsis.md  talk.md  vite.config.js
.github/workflows/: deploy.yml
practical session/: 01-structure.md  02-format-et-type.md  03.linter.md  04.documentation.md  05.tests.md  06.distribution.md
practical_session/: 00-environnement.ipynb  00-environnement.md  01-structure.ipynb  01-structure.md  02-distribution.ipynb  02-distribution.md  03-format-et-linter.ipynb  04-sphinx.ipynb  05-pytest.ipynb  06-github-actions.ipynb  06-github-actions.md
practical_session/TPs/1.packaging/final_step/: pyproject.toml
practical_session/TPs/1.packaging/final_step/splinart/: draw.py
practical_session/TPs/1.packaging/step0/: pyproject.toml
practical_session/TPs/1.packaging/step1/: pyproject.toml
practical_session/TPs/1.packaging/step2/: pyproject.toml
practical_session/TPs/1.packaging/step2/splinart/: draw.py
practical_session/TPs/1.packaging/step3/: pyproject.toml
practical_session/TPs/1.packaging/step3/splinart/: compute.py
practical_session/TPs/1.packaging/step3/splinart/spline/: spline.py
practical_session/TPs/2.distribution/final_step/: .pypirc  pyproject.toml
practical_session/TPs/2.distribution/final_step/examples/: circle.py
practical_session/TPs/2.distribution/final_step/splinart/: draw.py
practical_session/TPs/2.linter/final_step/recipes/: meta.yaml
practical_session/TPs/2.linter/final_step/splinart/: __init__.py
practical_session/TPs/2.linter/final_step/splinart/spline/: splint.py
practical_session/TPs/2.linter/step0/splinart/spline/: spline.py
practical_session/TPs/3.linter/final_step/: pyproject.toml
practical_session/TPs/3.linter/final_step/examples/: lines.py
practical_session/TPs/3.linter/final_step/recipes/: meta.yaml
practical_session/TPs/3.linter/final_step/splinart/: __init__.py  color.py  compute.py  draw.py  version.py
practical_session/TPs/3.linter/final_step/splinart/scripts/: cli_splinart.py
practical_session/TPs/3.linter/final_step/splinart/shapes/: __init__.py  base.py
practical_session/TPs/3.linter/final_step/splinart/spline/: __init__.py  spline.py  splint.py
practical_session/TPs/3.linter/step0/examples/: circles.py  line.py
practical_session/TPs/3.linter/step0/splinart/: compute.py
practical_session/TPs/3.linter/step0/splinart/scripts/: cli_splinart.py
practical_session/TPs/3.linter/step0/splinart/shapes/: base.py
practical_session/TPs/3.linter/step0/splinart/spline/: splint.py
practical_session/TPs/3.sphinx/final_step/: pylintrc
practical_session/TPs/3.sphinx/step0/: spline.md
practical_session/TPs/3.sphinx/step0/splinart/: color.py  draw.py
practical_session/TPs/3.sphinx/step0/splinart/shapes/: __init__.py
practical_session/TPs/4.pytest/final_step/doc/: conf.py
practical_session/TPs/4.pytest/final_step/doc/api/: splinart.md
practical_session/TPs/4.pytest/final_step/examples/: line.py
practical_session/TPs/4.sphinx/final_step/: pyproject.toml
practical_session/TPs/4.sphinx/final_step/doc/: conf.py  index.md
practical_session/TPs/4.sphinx/final_step/doc/api/: splinart.spline.md
practical_session/TPs/4.sphinx/final_step/examples/: circle.py  lines.py
practical_session/TPs/4.sphinx/final_step/splinart/: compute.py
practical_session/TPs/5.pytest/final_step/: pyproject.toml
practical_session/TPs/5.pytest/final_step/doc/api/: modules.md  splinart.shapes.md  splinart.spline.md
practical_session/TPs/5.pytest/final_step/examples/: circles.py  lines.py
practical_session/TPs/5.pytest/final_step/splinart/: compute.py  draw.py
practical_session/TPs/5.pytest/final_step/splinart/scripts/: cli_splinart.py
practical_session/TPs/5.pytest/final_step/splinart/shapes/: base.py
practical_session/TPs/5.pytest/final_step/splinart/spline/: __init__.py  spline.py
practical_session/configuration/: environment.yml  requirements.txt
practical_session/examples/calculator/: calc.py  pyproject.toml  setup.py
practical_session/examples/simple_calculator/calculator/: __init__.py
practical_session/examples/simple_calculator/calculator/operator/: __init__.py
slides/: index.html  lien.md  main.js  menu.js  vite.config.js
slides/public/theme/: dark.css  light.css
