[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
dynamic = ["version"]
requires-python = ">=3.8"

license = { file = "LICENSE.txt" }

description = "Simple calculator"
authors = [{ name = "Loic Gouarin", email = "loic.gouarin@gmail.com" }]
readme = "readme.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Cython',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]


[project.urls]
documentation = "https://numpy.org/doc/"
source = "https://github.com/numpy/numpy"
download = "https://pypi.org/project/numpy/#files"
tracker = "https://github.com/numpy/numpy/issues"
"release notes" = "https://numpy.org/doc/stable/release"


[tool.setuptools]
packages = ["calculator", "calculator.operator"]

[project.scripts]
calculator-script = "calculator.command_line:main"

[tool.setuptools.dynamic]
version = { attr = "calculator.version.__version__" }

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
calculator = { path = ".", editable = true }

[tool.pixi.tasks]
sdist = "python -m build --sdist"
bdist = "python -m build --wheel"


[tool.pixi.feature.conda-recipe.dependencies]
anaconda-client = ">=1.12.3,<1.13"
conda-build = ">=24.5.1,<24.6"

[tool.pixi.feature.twine.dependencies]
twine = ">=3.3.0,<3.4"

[tool.pixi.feature.twine.tasks]
pypi-release = { cmd = "twine upload --repository-url https://test.pypi.org/legacy/ dist/*", depends-on = [
    "sdist",
    "bdist",
] }

[tool.pixi.environments]
release = ["conda-recipe"]
twine = ["twine"]

[tool.pixi.dependencies]
cython = ">=3.0.10,<3.1"
build = ">=0.7.0,<0.8"
