[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "splinart"
dynamic = ["version"]
requires-python = ">=3.8"

license = { file = "LICENSE" }

description = "spline art generator"
authors = [{ name = "Loic Gouarin", email = "loic.gouarin@gmail.com" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Cython',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

[tool.setuptools.dynamic]
version = { attr = "splinart.version.__version__" }

[tool.setuptools.packages.find]
include = ["splinart*"]

[project.scripts]
splinart = "splinart.scripts.cli_splinart:main"

[project.urls]
Source = "https://github.com/gouarin/splinart"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
splinart = { path = ".", editable = true }

[tool.pixi.feature.pypi-release.tasks]
sdist = "python -m build --sdist"
bdist = "python -m build --wheel"
twine = { cmd = "twine upload -r testpypi dist/*", depends-on = [
    "sdist",
    "bdist",
] }

[tool.pixi.dependencies]
numpy = ">=2.0.0,<2.1"
matplotlib = ">=3.8.4,<3.9"

[tool.pixi.feature.pypi-release.dependencies]
build = ">=0.7.0,<0.8"
twine = ">=5.1.1,<5.2"

[tool.pixi.feature.conda-release.dependencies]
conda-build = ">=24.5.1,<24.6"
anaconda-client = ">=1.12.3,<1.13"

[tool.pixi.feature.conda-release.tasks]
conda-build = "conda build --croot $HOME/conda-build recipes"
conda-publish = { cmd = "anaconda upload $HOME/conda-build/noarch/splinart-*.tar.bz2", depends-on = [
    "conda-build",
] }

[tool.pixi.feature.linter.dependencies]
pylint = ">=2.7.2,<2.8"
ruff = ">=0.5.0,<0.6"

[tool.pixi.feature.sphinx.dependencies]
sphinx = ">=7.3.5,<7.4"
nbsphinx = ">=0.9.4,<0.10"
myst-parser = ">=3.0.1,<3.1"
numpydoc = ">=1.7.0,<1.8"
nbsphinx-link = ">=1.3.0,<1.4"
pydata-sphinx-theme = ">=0.15.4,<0.16"
docutils = "0.20.*"
ipython = ">=8.26.0,<8.27"

[tool.pixi.feature.sphinx.tasks]
build-doc = "cd doc; make html"

[tool.pixi.feature.tests.dependencies]
pytest = ">=8.2.0,<8.3"
pytest-cov = ">=5,<6"
pytest-mpl = ">=0.17,<0.18"

[tool.pixi.feature.tests.tasks]
pytest = "cd tests; pytest --mpl --cov splinart"

[tool.pixi.environments]
publish = ["pypi-release", "conda-release"]
linter = ["linter"]
sphinx = ["sphinx"]
tests = ["tests"]

[tool.pytest.ini_options]
markers = ["long: marks tests as long (deselect with '-m \"not long\"')"]
